# CRISPR-Array-Generator

./: README.md  pyproject.toml  setup.py  test.xlsx
.github/workflows/: python-packages.yml
crispr_array_generator/: array.py  constants.py  crisprarraygenerator.py
crisprarraygenerator/: constants.py  crisprarraygenerator.py
examples/: examplegrnas.xlsx
test/: test_crisprarraygenerator  test_crisprarraygenerator.py
