[crispr_array_generator]
name = crispr_array_generator
version = "0.1"
authors = [{ name = "Willow Chernoske", email = 'wachern@uw.edu" }]
description = "A tool to automate the design of CRISPR Cas12 arrays"
readme = README.md
requires-python = ">=3.1"
classifiers = [
    "Programming Language :: Python :: 3",
    "Liscense :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    ]

[project.urls]
Homepage = "https://github.com/wachern/crispr_array_generator/blob/main/crispr_array_generator/crisprarraygenerator.py"
Documentation = "https://github.com/wachern/crispr_array_generator/tree/main/docs"
